deployments/prod/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: next3-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: next3-backend
  template:
    metadata:
      labels:
        app: next3-backend
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: backend
          image: ghcr.io/devalexua/next3-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 4000
          readinessProbe:
            httpGet:
              path: /health
              port: 4000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 4000
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: next3-backend-service
spec:
  selector:
    app: next3-backend
  ports:
    - name: http
      port: 80
      targetPort: 4000
  type: ClusterIP
