deployments/prod/backend-loadbalancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: next3-backend-lb
spec:
  selector:
    app: next3-backend
  ports:
    - name: http
      port: 80
      targetPort: 4000
  type: LoadBalancer
