deployments/prod/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: next3-postgres
spec:
  selector:
    app: next3-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
  type: ClusterIP
