deployments/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: next3-backend-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - api.next3.example.com
      secretName: next3-backend-tls
  rules:
    - host: api.next3.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: next3-backend-service
                port:
                  number: 80
